<resources>
    <string name="app_name">My Application3</string>
    <string name="https_codingwithmitch_com">https://codingwithmitch.com</string>
    <string name="i_live_in_vancouver_bc">I live in Vancouver, BC</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="following_100">Following: 100</string>
    <string name="followers_200">Followers: 200</string>
    <string name="posts_50">Posts: 50</string>
    <string name="this_is_my_bio">This is my bio.</string>
    <string name="pakeeza_qaisar">Pakeeza Qaisar</string>
    <string name="beneath_the_facade_of_student_life_lies_a_heart_burdened_by_the_silent_screams_of_academic_torment">Beneath the facade of student life lies a heart burdened by the silent screams of academic torment.</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="_643">643</string>
    <string name="_4">4</string>
    <string name="_400">400</string>
</resources>