<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:id="@+id/main">

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/pakeeza_qaisar"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_below="@id/profilePicture"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"

        />
    <!-- Edit Profile Button -->
    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:layout_alignTop="@id/profilePicture"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/blue"
        />

    <!-- Username -->


    <!-- Number of Following -->

    <!-- Number of Followers -->
    <TextView
        android:id="@+id/numberOfFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_alignParentStart="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="-120dp"
        android:text="@string/following"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        />
    <TextView
        android:id="@+id/numbF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_alignParentStart="true"
        android:layout_marginStart="170dp"
        android:layout_marginTop="-140dp"
        android:text="@string/_643"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        />

    <!-- Number of Posts -->

    <!-- Bio -->

    <!-- Settings Button -->

    <TextView
        android:id="@+id/numberOfFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="-120dp"
        android:layout_marginStart="320dp"
        android:text="@string/followers"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/numberOfFol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="-140dp"
        android:layout_marginStart="340dp"
        android:text="@string/_400"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/numberOfPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-120dp"
        android:layout_marginEnd="100dp"
        android:text="@string/posts"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numberOfFollowing"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:text="@string/beneath_the_facade_of_student_life_lies_a_heart_burdened_by_the_silent_screams_of_academic_torment"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/numberOfP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-140dp"
        android:layout_marginEnd="110dp"
        android:text="@string/_4"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/setting"
        android:layout_below="@id/bio"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-140dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:backgroundTint="@color/pink"/>



    <ImageButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/avatar"
        android:layout_below="@id/bio"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="@color/pink"/>
    <ImageButton
        android:id="@+id/heart"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:src="@drawable/heart"
        android:layout_below="@id/bio"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="@color/pink"/>
    <ImageButton
        android:id="@+id/reels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/reels"
        android:layout_below="@id/bio"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="160dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="@color/pink"/>
    <ImageButton
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camera"
        android:layout_below="@id/bio"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="240dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="@color/pink"/>
    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/home"
        android:layout_below="@id/bio"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="320dp"
        android:layout_marginTop="450dp"
        android:backgroundTint="@color/pink"/>


    <ImageView
        android:id="@+id/post1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/post1"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-8dp"
        android:background="@drawable/outline"
        />

    <ImageView
        android:id="@+id/post2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="250dp"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="-8dp"
        android:src="@drawable/post3"
        android:background="@drawable/outline"
         />
    <ImageView
        android:id="@+id/post3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="-8dp"
        android:src="@drawable/post4"
        android:background="@drawable/outline"
        android:layout_marginStart="0dp"
        />
    <ImageView
        android:id="@+id/post4"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="450dp"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="-8dp"
        android:src="@drawable/post5"
        android:background="@drawable/outline"
        />




</RelativeLayout>
